Renamed "retrieveIssuesForVoter" to "issuesRetrieve". Reduced voterGuidesToFollowRetrieve to only retrieve 150 for speed. Added more size options when displaying IssueCard. Added first version of Issue images under each candidate. Collapsed vision page into organization page.

--- a/src/sass/components/_ballotList.scss
+++ b/src/sass/components/_ballotList.scss
@@ -90,6 +90,12 @@
   &__image {
     display: inline;
 
+    &--small {
+      margin-left: $space-xxs;
+      width: 32px; // 32px is set in WeVoteServer environment_variables as PROFILE_IMAGE_TINY_WIDTH
+      border-radius: $radius-xs;
+    }
+
     &--medium {
       margin-left: $space-xxs;
       width: 48px; // 48px is set in WeVoteServer environment_variables as PROFILE_IMAGE_MEDIUM_WIDTH
